Services/ingress-egress/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
  - name: web
    protocol: TCP
    port: 80
    nodePort: 8080
