Services/ingress-egress/ingress-service-based-namedport.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    -http:
      paths:
        - path: /somepath
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                name: web
